# map-reduce-word-count-openmp-mpi

./: .gitignore  CMakeLists.txt  Makefile  Project Report Final.docx  README.md  entry.c  hashTable.h  mpi_openmp.c  mpi_par.c  mpi_parallel.c  openmp.c  par_read_map.c  parallel.c  parallel_RMcomb.c  parallel_read_map.c  parallel_read_map_new.c  queue.h  run_all.sh  serial.c  submit_mpi_parallel.sub  submit_parallel.sub  submit_parallel_2.sub  submit_parallel_read_map.sub  submit_serial.sub  timing_results_final.xlsx
files/: 11.txt  12.txt  127.txt  14.txt  145.txt  15.txt  16.txt  167.txt  218.txt  96.txt  book.txt  text1.txt
output/: parallel_results.txt  serial_results.txt
scripts/: get_csv_results.sh  submit_mpi_openmp.sub  submit_openmp.sub  submit_parallel.sub  submit_parallel_read_map.sub
src/: parallel.c
src/util/: util.h
util/: file_copy.sh  hashTable.h  queue.h  util.h
